# gazer

./: CMakeLists.txt  README.MD  Vec3.cpp  Vec3.hpp
tests/: CMakeLists.txt  Vec3Test.cpp
